Fixed the cray overlap on the mobile logos

--- a/app/assets/stylesheets/responsive.css.sass
+++ b/app/assets/stylesheets/responsive.css.sass
@@ -79,3 +79,10 @@
     padding: 75px 25px
     > header
       display: none
+
+  .clientsList li
+    display: block
+    width: 100%
+    text-align: center
+    height: 100%
+    margin-bottom: 25px
